--- a/docs/vragen.tex
+++ b/docs/vragen.tex
@@ -1,3 +1,4 @@
 Staat er een fout in xml bestand? regel 2. beschrijving staat buiten de beschrijving
 Mag ik gebruik maken van <cstring>
 Opdracht zegt dingen inlezen is frontend, mag dit ook in backend?
+eigen vector. resize method. Mag ik std::move gebruiken?
