--- a/docs/vragen.tex
+++ b/docs/vragen.tex
@@ -2,3 +2,5 @@ Staat er een fout in xml bestand? regel 2. beschrijving staat buiten de beschrij
 Mag ik gebruik maken van <cstring>
 Opdracht zegt dingen inlezen is frontend, mag dit ook in backend?
 eigen vector. resize method. Mag ik std::move gebruiken?
+Mag ik de factory aanpassen dat de methode een argument heeft?
+Logica moet in frontend. Player mag niet backend. Mag player enemies subscriben voor damage krijgen?
