--- a/docs/vragen.tex
+++ b/docs/vragen.tex
@@ -1,6 +1,10 @@
-Staat er een fout in xml bestand? regel 2. beschrijving staat buiten de beschrijving
-Mag ik gebruik maken van <cstring>
-Opdracht zegt dingen inlezen is frontend, mag dit ook in backend?
-eigen vector. resize method. Mag ik std::move gebruiken?
-Mag ik de factory aanpassen dat de methode een argument heeft?
-Logica moet in frontend. Player mag niet backend. Mag player enemies subscriben voor damage krijgen?
+Mag ik gebruik maken van <cstring> --> Ja
+???? Opdracht zegt dingen inlezen is frontend, mag dit ook in backend?
+eigen vector. resize method. Mag ik std::move gebruiken? --> ja
+Mag ik de factory aanpassen dat de methode een argument heeft? --> ja
+Logica moet in frontend. Player mag niet backend. Mag player enemies subscriben voor damage krijgen? --> ja
+Mag mijn dugeon class een vector hebben? --> nee
+Wat kan ik beter doen dan singleton voor de sql class? --> ja
+Gewoon pointers doorsturen is wel RAII toch? --> ja
+
+I have deleted the code for my own unque pointers as they were to error prone. Using the preivous knowledge, can you rewrite my class so it is RAII? Make sure to not use smart pointers
