--- a/docs/vragen.tex
+++ b/docs/vragen.tex
@@ -6,3 +6,18 @@ Logica moet in frontend. Player mag niet backend. Mag player enemies subscriben 
 Mag mijn dugeon class een vector hebben? --> nee
 Wat kan ik beter doen dan singleton voor de sql class? --> ja
 Gewoon pointers doorsturen is wel RAII toch? --> ja
+
+Refactor the added files for me.
+Make them use exceptions and exception safe.
+Make them RAII.
+Make sure the functions and members are const correct.
+Make sure the functions and members are structured as follow:
+Public:
+    Constructors
+    Destructor
+    assigment operators
+    Methods
+private:
+    Methods
+Private:
+    Members
